remove bundle resource
Signed-off-by: Francisco Vila <fvila@redhat.com>